fixed up some spacing

--- a/dev/styles/partials/_contact.scss
+++ b/dev/styles/partials/_contact.scss
@@ -21,6 +21,6 @@
 		background-color: $primaryColour;
 		position: relative;
 		top: -50%;
-		margin: 0 auto;
+		margin: 20px auto;
 	}
 }
