--- a/dev/styles/partials/_main.scss
+++ b/dev/styles/partials/_main.scss
@@ -6,6 +6,10 @@
 	background-image: url("../images/Apple-Cherry-Prof-618x380.jpg");
 }
 
+.about .advisor {
+	margin: 20px auto;
+}
+
 .contactPage {
 	& .wrapper {
 		margin: 20px auto;
