--- a/dev/styles/partials/core/_globals.scss
+++ b/dev/styles/partials/core/_globals.scss
@@ -16,10 +16,12 @@ h1 {
   text-transform: uppercase;
   color: $primaryColour;
   font-size: 2rem;
+  margin-top: 20px;
 }
 
 h2 {
   font-size: 1.5rem;
+  margin-bottom: 5px;
 }
 
 p {
@@ -55,6 +57,6 @@ body {
 }
 
 .wrapper {
-  max-width: calc(100vw / 1.618);
+  max-width: calc(100vw * 0.75);
   margin: 0 auto;
 }
