--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -146,10 +146,12 @@ h1, h2, h3 {
 h1 {
   text-transform: uppercase;
   color: #414099;
-  font-size: 2rem; }
+  font-size: 2rem;
+  margin-top: 20px; }
 
 h2 {
-  font-size: 1.5rem; }
+  font-size: 1.5rem;
+  margin-bottom: 5px; }
 
 p {
   font-size: 1.2rem;
@@ -178,7 +180,7 @@ body {
   background: none; }
 
 .wrapper {
-  max-width: calc(100vw / 1.618);
+  max-width: calc(100vw * 0.75);
   margin: 0 auto; }
 
 .hamburger {
@@ -250,6 +252,9 @@ nav {
 .about .hero, .contactPage .hero {
   background-image: url("../images/Apple-Cherry-Prof-618x380.jpg"); }
 
+.about .advisor {
+  margin: 20px auto; }
+
 .contactPage .wrapper {
   margin: 20px auto; }
 
@@ -313,4 +318,4 @@ footer {
     background-color: #414099;
     position: relative;
     top: -50%;
-    margin: 0 auto; }
+    margin: 20px auto; }
